SUBDIRS = src images levels

reportdir = $(datadir)/doc/$(PACKAGE)
dist_report_DATA = report-fr/rapport.pdf

EXTRA_DIST = \
	imgsrc/menu.xcf.gz \
	imgsrc/texts.xcf.gz \
	imgsrc/window.xcf.gz \
	report-fr/capture.png \
	report-fr/diagramme.eps \
	report-fr/diagramme.xmi.gz \
	report-fr/Makefile \
	report-fr/rapport.tex
