AM_CXXFLAGS = $(GTKMM_CFLAGS)
AM_CPPFLAGS = -DDATA_BASE_DIR="\"$(pkgdatadir)/\""
AM_LDFLAGS  = $(GTKMM_LIBS)

bin_PROGRAMS = boxland
boxland_SOURCES = \
	Board.cpp \
	Board.h \
	Character.cpp \
	Character.h \
	Ground.cpp \
	Ground.h \
	main.cpp \
	Menu.cpp \
	Menu.h \
	Point.h \
	Screen.cpp \
	Screen.h \
	TextScreen.cpp \
	TextScreen.h \
	WindowArea.cpp \
	WindowArea.h
